# aws-databricks-neo4j-lab

./: .gitignore  BUNDLE.md  CLAUDE.md  FINISH.md  LOCKDOWN.md  PERMS.md  PROPOSED_SLIDES.docx  PROPOSED_SLIDES.md  PROPOSED_WORKSHOP.docx  PROPOSED_WORKSHOP.md  README.md  SIMPLE_OVERVIEW.md  TEMPLATE.md  USERS.md  find_largest_files.sh  prepare_material.sh
Lab_0_Sign_In/: README.md
Lab_1_Aura_Setup/: README.md
Lab_4_AWS_Agent_Core/: README.md
Lab_5_Databricks_ETL_Neo4j/: 01_aircraft_etl_to_neo4j.ipynb  02_load_neo4j_full.ipynb  DATABRICKS_SIGNUP.md  DBX.md  README.md  SAMPLE_QUERIES.md  aircraft_etl_to_neo4j.html  load_neo4j.py
Lab_6_AgentBricks/: README.md
Lab_6_Semantic_Search/: 01_data_and_embeddings.ipynb  02_graphrag_retrievers.ipynb  03_data_and_embeddings.ipynb  03_hybrid_retrievers.ipynb  README.md  data_utils.py  maintenance_manual.md
Lab_7_AgentBricks/: PART_A.md  PART_B.md  README.md
Lab_7_Semantic_Search/: 03_data_and_embeddings.ipynb  04_graphrag_retrievers.ipynb  README.md  SAMPLE_QUERIES.md
Lab_8_Aura_Agents/: EXPLORE.md  README.md
docs/: DATA_ARCHITECTURE.md  README.md  package-lock.json  package.json
lab_setup/: .env.example  CATALOG_SETUP_COMPLEXITY.md  FIX_WORKSPACE.md  IAM_FIXES.md  MANUAL_SETUP.md  PYTHON_GUIDE.md  PYTHON_SDK_ALTERNATIVE.md  README.md  cleanup.sh  create_lakehouse_tables.py  create_lakehouse_tables.sh  delete_volumes.sh  fix_workspace.sh  prepare_material.sh  setup_databricks.sh
lab_setup/user_mngmnt/: pyproject.toml  users.csv
lab_setup/user_mngmnt/src/user_mngmnt/: __init__.py  groups.py  main.py  users.py
(+72 files in other folders)
